# OpenGLCamera2

./: .gitignore  README.md  hello.glsl
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/byteflow/openglcamera2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fshader_0.glsl  fshader_1.glsl  fshader_10.glsl  fshader_11.glsl  fshader_12.glsl  fshader_13.glsl  fshader_14.glsl  fshader_15.glsl  fshader_16.glsl  fshader_17.glsl  fshader_18.glsl  fshader_19.glsl  fshader_2.glsl  fshader_20.glsl  fshader_23.glsl  fshader_24.glsl  fshader_25.glsl  fshader_26.glsl  fshader_27.glsl  fshader_28.glsl  fshader_29.glsl  fshader_3.glsl  fshader_30.glsl  fshader_31.glsl  fshader_32.glsl  fshader_33.glsl  fshader_4.glsl  fshader_5.glsl  fshader_6.glsl  fshader_7.glsl  fshader_8.glsl  fshader_9.glsl
app/src/main/cpp/: ByteFlowRenderJniImpl.cpp  CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/context/: ByteFlowRenderContext.cpp  ByteFlowRenderContext.h  RenderContext.cpp  RenderContext.h
app/src/main/cpp/example/: BluelineChallengeExample.cpp  BluelineChallengeExample.h  ConveyorBeltExample.cpp  ConveyorBeltExample.h  ConveyorBeltExample_1.cpp  ConveyorBeltExample_1.h  GLExampleBase.h
app/src/main/cpp/render/: ByteFlowDef.h  ByteFlowRender.h  GLByteFlowRender.cpp  GLByteFlowRender.h  GLShaders.h  GLUtils.cpp  GLUtils.h
app/src/main/cpp/util/: ImageDef.h  LogUtil.h  SyncLock.h
app/src/main/java/com/byteflow/openglcamera2/: BaseRenderActivity.java  ImageActivity.java  MainActivity.java
app/src/main/java/com/byteflow/openglcamera2/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/byteflow/openglcamera2/camera/: Camera2FrameCallback.java  Camera2Wrapper.java  CameraUtil.java
app/src/main/java/com/byteflow/openglcamera2/frame/: ByteFlowFrame.java  FrameUtil.java
app/src/main/java/com/byteflow/openglcamera2/gesture/: MyGestureListener.java
app/src/main/java/com/byteflow/openglcamera2/render/: ByteFlowRender.java  GLByteFlowRender.java  RenderParam.java
app/src/main/res/drawable/: ic_switch_filter.xml  ic_switch_filter_btn.xml  ic_switch_filter_pressed.xml
app/src/main/res/layout/: activity_image.xml  activity_main.xml  content_main.xml  resolution_item_layout.xml  resolution_selected_layout.xml
app/src/main/res/layout-v23/: resolution_item_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/byteflow/openglcamera2/: ExampleUnitTest.java
gif/: OpenGLCamera2.apk
gradle/wrapper/: gradle-wrapper.properties
